[package]
name = "sarcasm"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cwfitzgerald/sarcasm-rs"
readme = "README.md"
description = "SaRcAsM tExT creation and validation library."
homepage = "https://github.com/cwfitzgerald/sarcasm-rs"
categories = ["text-processing", "value-formatting", "encoding", "localization"]
keywords = ["fun", "sarcasm", "text", "encoding", "decoding"]

[workspace]
members = ["sarcasm-utils"]
default-members = ["sarcasm-utils"]

[badges]
appveyor = { repository = "cwfitzgerald/sarcasm-rs" }
travis-ci = { repository = "cwfitzgerald/sarcasm-rs" }
is-it-maintained-open-issues = { respository = "cwfitzgerald/sarcasm-rs" }
is-it-maintained-issue-resolution = { respository = "cwfitzgerald/sarcasm-rs" }
maintenance = { status = "actively-maintained" }

[dependencies]
clipboard = "0.5.0"
chrono = "0.4.7"
fern = { version = "0.5.8" }
log = "0.4.8"
sarcasm-utils = { version = "0.1.0", path = "sarcasm-utils" }
structopt = "0.2.18"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
