[package]
name = "sarcasm-utils"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
log = "0.4.8"

[dev-dependencies]
assert_matches = "1.3.0"
