[package]
name = "sarcasm-utils"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cwfitzgerald/sarcasm-rs"
readme = "README.md"
description = "SaRcAsM tExT creation and validation library."
homepage = "https://github.com/cwfitzgerald/sarcasm-rs/tree/master/sarcasm-utils"
categories = ["text-processing", "value-formatting", "encoding", "localization"]
keywords = ["fun", "sarcasm", "text", "encoding", "decoding"]

[badges]
is-it-maintained-open-issues = { respository = "cwfitzgerald/sarcasm-rs" }
is-it-maintained-issue-resolution = { respository = "cwfitzgerald/sarcasm-rs" }
maintenance = { status = "actively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
log = "0.4.8"

[dev-dependencies]
assert_matches = "1.3.0"
